--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -12,7 +12,7 @@ pool:
 jobs: 
 - job: Job1
   steps:
-  - script: Job 1 - echo Hello, world, changed!
+  - script: echo  Job 1 - Hello, world, changed!
     displayName: 'Run a one-line script'
 
   - script: |
@@ -20,6 +20,12 @@ jobs:
       echo See https://aka.ms/yaml
     displayName: 'Run a multi-line script'
 - job: Job2
+  dependsOn: Job1
   steps:
   - script: echo Job 2 !
+    displayName: 'Run a one-line script'
+- job: Job3
+  dependsOn: Job2
+  steps:
+  - script: echo Job 3 !
     displayName: 'Run a one-line script'
