--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -9,30 +9,37 @@ stages:
   - job: FirstJob
     steps:
     - bash: echo Build FirstJob
+    - bash: echo $(NewPipelineVariable)
   - job: SecondJob
     steps:
     - bash: echo Build SecondJob
 
 - stage: DevDeploy
+  variables:
+   environment: Dev
   dependsOn: Build
   jobs:
   - job: FirstJob
     steps:
-    - bash: echo DevDeploy FirstJob
+    - bash: echo $(environment)Deploy FirstJob
 
 - stage: QADeploy
+  variables:
+   environment: QA 
   dependsOn: Build
   jobs:
   - job: FirstJob
     steps:
-    - bash: echo QADeploy FirstJob
+    - bash: echo $(environment)Deploy FirstJob
 
 - stage: ProdDeploy
+  variables:
+   env: Prod
   dependsOn: 
   - DevDeploy
   - QADeploy 
   jobs:
   - job: FirstJob
     steps:
-    - bash: echo Prod FirstJob
+    - bash: echo $(env) FirstJob
 
