--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -10,36 +10,40 @@ stages:
     steps:
     - bash: echo Build FirstJob
     - bash: echo $(NewPipelineVariable)
-  - job: SecondJob
-    steps:
-    - bash: echo Build SecondJob
+    - bash: echo $(Build.BuildNumber)
+    - bash: echo $(Build.BuildID)
+    - bash: echo $(Build.SourceBranchName)
+    - bash: echo $(Build.SourcesDirectory)
+    - bash: echo $(System.DefaultWorkingDirectory)
+    - bash: ls -R $(System.DefaultWorkingDirectory)
+    - bash: echo $(Build.ArtifactStagingDirectory)
 
-- stage: DevDeploy
-  variables:
-   environment: Dev
-  dependsOn: Build
-  jobs:
-  - job: FirstJob
-    steps:
-    - bash: echo $(environment)Deploy FirstJob
+# - stage: DevDeploy
+#   variables:
+#    environment: Dev
+#   dependsOn: Build
+#   jobs:
+#   - job: FirstJob
+#     steps:
+#     - bash: echo $(environment)Deploy FirstJob
 
-- stage: QADeploy
-  variables:
-   environment: QA 
-  dependsOn: Build
-  jobs:
-  - job: FirstJob
-    steps:
-    - bash: echo $(environment)Deploy FirstJob
+# - stage: QADeploy
+#   variables:
+#    environment: QA 
+#   dependsOn: Build
+#   jobs:
+#   - job: FirstJob
+#     steps:
+#     - bash: echo $(environment)Deploy FirstJob
 
-- stage: ProdDeploy
-  variables:
-   env: Prod
-  dependsOn: 
-  - DevDeploy
-  - QADeploy 
-  jobs:
-  - job: FirstJob
-    steps:
-    - bash: echo $(env) FirstJob
+# - stage: ProdDeploy
+#   variables:
+#    env: Prod
+#   dependsOn: 
+#   - DevDeploy
+#   - QADeploy 
+#   jobs:
+#   - job: FirstJob
+#     steps:
+#     - bash: echo $(env) FirstJob
 
