--- a/03-environment-deployment.yml
+++ b/03-environment-deployment.yml
@@ -1,17 +1,38 @@
 trigger:
 - main
 
-strategy:
-  matrix:
-   linux:
-    operatingSystem: 'ubuntu-latest'
-   mac:
-    operatingSystem: 'macos-latest'
-
-
 pool:
-  vmImage: $(operatingSystem)
+  vmImage: ubuntu-latest
+# strategy:
+#   matrix:
+#    linux:
+#     operatingSystem: 'ubuntu-latest'
+#    mac:
+#     operatingSystem: 'macos-latest'
 
-steps:
-- script: echo running on $(operatingSystem) Hello, world!
-  displayName: 'Run a one-line script'
+stages:
+- stage: Build
+  jobs: 
+  - job: BuildJob
+    steps:
+    - bash: echo Building!
+- stage: DevDeploy
+  jobs: 
+  - deployment: DevDeployJob
+    environment: Dev
+    strategy: 
+      runOnce:
+        deploy: 
+          steps: 
+          - script: echo Deployment for Dev
+- stage: QADeploy
+  jobs: 
+  - deployment: QADeployJob
+    environment: QA
+    strategy: 
+      runOnce:
+        deploy: 
+          steps: 
+          - script: echo Deployment for QA
+
+
